refactor : host 구조 변경